<resources>
    <string name="app_name">Tasking</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Tasking</string>
    <string name="nav_header_subtitle">Remember what matters</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home">Task List</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">App Information</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_ok">Login</string>
    <string name="login_error_no_email">Email Mandatory</string>
    <string name="login_error_no_password">Password Mandatory</string>
    <string name="login_error">User and password doesn\'t match</string>
    <string name="menu_action_logout">Logout</string>
    <string name="login_create">Create account</string>
    <string name="create_label_email">Email</string>
    <string name="create_label_password">Password</string>
    <string name="create_label_confirm">Confirm password</string>
    <string name="create_ok">Create account</string>
    <string name="create_error">Accout creation fail</string>
    <string name="create_error_no_email">Email Mandatory</string>
    <string name="create_error_no_password">Password Mandatory</string>
    <string name="create_error_no_confirmation">Confirm Password</string>
    <string name="create_error_mismatch">Passwords mismatch</string>
    <string name="login_link_recover">Forgot your pasword?</string>
    <string name="recover_email">Email</string>
    <string name="recover_description">You will get an email with a link to change the password</string>
    <string name="recover_ok">Send code</string>
    <string name="recover_sent">We sent you an email to reset your password</string>
    <string name="create_email_notification">We sent you an email to verify your account</string>
    <string name="create_text">We will send you an email to verify your account. Check your spam also.</string>
    <string name="create_email_fail">We have issues to deliver the email</string>
    <string name="alert_succesful_firebase">Tasking Added Succesfully!</string>
    <string name="alert_error_firebase">Ups!, Error at adding task</string>
    <string name="alert_condition_delete">Are you sure delete task?</string>
    <string name="alert_header">Tasking Messages!</string>
    <string name="alert_empty_task">Must typing a task!</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">CANCEL</string>
    <string name="alert_deleted_succesful">Task deleted succesfully</string>
    <string name="alert_cancel_deleted">Task not eliminated</string>
    <string name="alert_error_login">"Error at login, please contact us "</string>
    <string name="alert_mail_dev">dev.tasking@tasking.cl</string>
    <string name="email_subject">Tasking! app bug issues</string>
    <string name="email_body">Hi!, I found a bug issue whit code</string>
    <string name="code_email_ExampleFragment">123456</string>
    <string name="alert_error_delete_item">Error at deleting task, please contact us</string>
    <string name="alert_error_get_document">Error at getting documents, please contact us</string>
    <string name="alert_error_add_item">Error at add item, please contact us</string>
    <string name="code_email_LoginActivity">654321</string>
    <string name="code_email_MainActivity">987654</string>
    <string name="alert_error_validate_email">Error at validate email, please contact us</string>
    <string name="error_email_CreateAccountActivity">654987</string>
    <string name="error_email_RecoverPasswordActivity">963852</string>
    <string name="alert_error_create_account">Error at create account, please contact us</string>
    <string name="alert_error_validate_login">Error at validate login, please contact us</string>
    <string name="alert_error_recover_password">Error at recover password, please contact us</string>
    <string name="word_task">task</string>
    <string name="word_removed">removed</string>
    <string name="message_enter_task">Please enter a task</string>
    <string name="text_enter_task">Enter new task</string>
    <string name="button_add_task">Add item</string>
    <string name="app_info">App info</string>
    <string name="legal">Legal</string>
    <string name="side_sep">About Tasking</string>
</resources>
